Fixed sponsor title to not wrap when it's too long on big screens

--- a/src/components/sponsors/sponsors.scss
+++ b/src/components/sponsors/sponsors.scss
@@ -95,6 +95,7 @@
     font-size: 3.2rem;
     margin-bottom: 40px;
     text-align: left;
+    white-space: nowrap;
   }
 
   .sponsors-category--2nd,
